refactored the mcp implementation