@@ -1,20 +1,30 @@
 package com.spring.mcp.service.tools;
 
 import com.spring.mcp.model.dto.DocumentationDto;
+import com.spring.mcp.model.dto.mcp.*;
 import com.spring.mcp.model.entity.CodeExample;
 import com.spring.mcp.model.entity.ProjectVersion;
+import com.spring.mcp.model.entity.SpringBootCompatibility;
+import com.spring.mcp.model.entity.SpringBootVersion;
+import com.spring.mcp.model.entity.SpringProject;
+import com.spring.mcp.model.enums.VersionState;
 import com.spring.mcp.repository.CodeExampleRepository;
 import com.spring.mcp.repository.ProjectVersionRepository;
+import com.spring.mcp.repository.SpringBootCompatibilityRepository;
+import com.spring.mcp.repository.SpringBootVersionRepository;
 import com.spring.mcp.repository.SpringProjectRepository;
+import com.spring.mcp.service.SettingsService;
 import com.spring.mcp.service.documentation.DocumentationService;
 import com.spring.mcp.service.documentation.DocumentationServiceImpl;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.tool.annotation.Tool;
+import org.springframework.ai.tool.annotation.ToolParam;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
 import java.time.Instant;
+import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -32,6 +42,9 @@ public class SpringDocumentationTools {
     private final SpringProjectRepository projectRepository;
     private final ProjectVersionRepository versionRepository;
     private final CodeExampleRepository codeExampleRepository;
+    private final SpringBootVersionRepository springBootVersionRepository;
+    private final SpringBootCompatibilityRepository compatibilityRepository;
+    private final SettingsService settingsService;
 
     /**
      * Search Spring documentation with full-text search
@@ -39,54 +52,42 @@ public class SpringDocumentationTools {
     @Tool(description = """
         Search across all Spring documentation. Supports filtering by project, version, and documentation type.
         Returns relevant documentation links and snippets with relevance ranking.
-        Parameters:
-        - query (required): Search query string
-        - project (optional): Project slug (e.g., 'spring-boot', 'spring-framework')
-        - version (optional): Version string (e.g., '3.5.7')
-        - docType (optional): Documentation type (e.g., 'reference', 'api')
         """)
-    public Map<String, Object> searchSpringDocs(
-            String query,
-            String project,
-            String version,
-            String docType) {
+    public SearchDocsResponse searchSpringDocs(
+            @ToolParam(description = "Search query string (required)") String query,
+            @ToolParam(description = "Project slug filter (optional, e.g., 'spring-boot', 'spring-framework')") String project,
+            @ToolParam(description = "Version filter (optional, e.g., '3.5.7')") String version,
+            @ToolParam(description = "Documentation type filter (optional, e.g., 'reference', 'api')") String docType) {
 
-        log.info("Tool: search_spring_docs - query={}, project={}, version={}, docType={}",
-            query, project, version, docType);
-
+        log.info("Tool: searchSpringDocs - query={}, project={}, version={}, docType={}", query, project, version, docType);
         Instant startTime = Instant.now();
 
-        try {
-            // Validate query
-            if (query == null || query.isBlank()) {
-                return buildErrorResponse("Query parameter is required", null);
-            }
-
-            // Execute search
-            List<DocumentationDto> results = documentationService.search(query, project, version, docType);
-            long totalResults = documentationServiceImpl.countSearchResults(query, project, version, docType);
-
-            // Calculate execution time
-            long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
-
-            // Build successful response
-            return Map.of(
-                "success", true,
-                "query", query,
-                "filters", buildFiltersMap(project, version, docType),
-                "totalResults", totalResults,
-                "returnedResults", results.size(),
-                "executionTimeMs", executionTimeMs,
-                "results", results.stream()
-                    .map(this::mapDocumentationToResult)
-                    .collect(Collectors.toList())
-            );
-
-        } catch (Exception e) {
-            log.error("Error in search_spring_docs tool", e);
-            return buildErrorResponse("Search failed: " + e.getMessage(),
-                buildFiltersMap(project, version, docType));
+        if (query == null || query.isBlank()) {
+            throw new IllegalArgumentException("Query parameter is required");
         }
+
+        List<DocumentationDto> results = documentationService.search(query, project, version, docType);
+        long totalResults = documentationServiceImpl.countSearchResults(query, project, version, docType);
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        SearchDocsResponse.SearchFilters filters = new SearchDocsResponse.SearchFilters(
+            project != null ? project : "all",
+            version != null ? version : "all",
+            docType != null ? docType : "all"
+        );
+
+        List<SearchDocsResponse.DocumentationResult> docResults = results.stream()
+            .map(this::mapToDocumentationResult)
+            .collect(Collectors.toList());
+
+        return new SearchDocsResponse(
+            query,
+            filters,
+            totalResults,
+            results.size(),
+            executionTimeMs,
+            docResults
+        );
     }
 
     /**
@@ -94,46 +95,38 @@ public class SpringDocumentationTools {
      */
     @Tool(description = """
         List available versions for a Spring project. Shows latest stable, n-2 minor versions, and n+1 preview versions.
-        Parameters:
-        - project (required): Project slug (e.g., 'spring-boot', 'spring-framework', 'spring-data')
         """)
-    public Map<String, Object> getSpringVersions(String project) {
-        log.info("Tool: get_spring_versions - project={}", project);
+    public VersionsResponse getSpringVersions(
+            @ToolParam(description = "Project slug (required, e.g., 'spring-boot', 'spring-framework', 'spring-data')") String project) {
+
+        log.info("Tool: getSpringVersions - project={}", project);
 
         if (project == null || project.isBlank()) {
-            return Map.of(
-                "error", "Project parameter is required",
-                "success", false
-            );
+            throw new IllegalArgumentException("Project parameter is required");
         }
 
-        return projectRepository.findBySlug(project)
-            .map(p -> {
-                var versions = versionRepository.findByProjectOrderByVersionDesc(p);
-                return Map.of(
-                    "project", p.getName(),
-                    "slug", p.getSlug(),
-                    "description", p.getDescription() != null ? p.getDescription() : "",
-                    "versions", versions.stream()
-                        .map(v -> Map.of(
-                            "version", v.getVersion(),
-                            "type", v.getState().name(),
-                            "isLatest", v.getIsLatest(),
-                            "isDefault", v.getIsDefault(),
-                            "releaseDate", v.getReleaseDate() != null ? v.getReleaseDate().toString() : "unknown"
-                        ))
-                        .toList(),
-                    "count", versions.size(),
-                    "success", true
-                );
-            })
-            .orElse(Map.of(
-                "error", "Project not found: " + project,
-                "success", false,
-                "availableProjects", projectRepository.findByActiveTrue().stream()
-                    .map(p -> p.getSlug())
-                    .toList()
-            ));
+        SpringProject springProject = projectRepository.findBySlug(project)
+            .orElseThrow(() -> new IllegalArgumentException("Project not found: " + project));
+
+        List<ProjectVersion> versions = versionRepository.findByProjectOrderByVersionDesc(springProject);
+
+        List<VersionsResponse.VersionInfo> versionInfos = versions.stream()
+            .map(v -> new VersionsResponse.VersionInfo(
+                v.getVersion(),
+                v.getState().name(),
+                v.getIsLatest(),
+                v.getIsDefault(),
+                v.getReleaseDate() != null ? v.getReleaseDate().toString() : "unknown"
+            ))
+            .collect(Collectors.toList());
+
+        return new VersionsResponse(
+            springProject.getName(),
+            springProject.getSlug(),
+            springProject.getDescription() != null ? springProject.getDescription() : "",
+            versionInfos,
+            versions.size()
+        );
     }
 
     /**
@@ -142,36 +135,29 @@ public class SpringDocumentationTools {
     @Tool(description = """
         List all available Spring projects in the documentation system.
         Returns project names, slugs, descriptions, and homepage URLs.
-        No parameters required.
         """)
-    public Map<String, Object> listSpringProjects() {
-        log.info("Tool: list_spring_projects");
-
+    public ProjectsListResponse listSpringProjects() {
+        log.info("Tool: listSpringProjects");
         Instant startTime = Instant.now();
 
-        try {
-            var projects = projectRepository.findByActiveTrue();
-            long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+        List<SpringProject> projects = projectRepository.findByActiveTrue();
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
 
-            return Map.of(
-                "success", true,
-                "count", projects.size(),
-                "executionTimeMs", executionTimeMs,
-                "projects", projects.stream()
-                    .map(p -> Map.of(
-                        "name", p.getName(),
-                        "slug", p.getSlug(),
-                        "description", p.getDescription() != null ? p.getDescription() : "",
-                        "homepage", p.getHomepageUrl() != null ? p.getHomepageUrl() : "",
-                        "github", p.getGithubUrl() != null ? p.getGithubUrl() : ""
-                    ))
-                    .toList()
-            );
+        List<ProjectsListResponse.ProjectInfo> projectInfos = projects.stream()
+            .map(p -> new ProjectsListResponse.ProjectInfo(
+                p.getName(),
+                p.getSlug(),
+                p.getDescription() != null ? p.getDescription() : "",
+                p.getHomepageUrl() != null ? p.getHomepageUrl() : "",
+                p.getGithubUrl() != null ? p.getGithubUrl() : ""
+            ))
+            .collect(Collectors.toList());
 
-        } catch (Exception e) {
-            log.error("Error in list_spring_projects tool", e);
-            return buildErrorResponse("Failed to list projects: " + e.getMessage(), null);
-        }
+        return new ProjectsListResponse(
+            projects.size(),
+            executionTimeMs,
+            projectInfos
+        );
     }
 
     /**
@@ -180,71 +166,52 @@ public class SpringDocumentationTools {
     @Tool(description = """
         Get all documentation for a specific Spring project version.
         Returns all documentation links organized by type (reference, api, guides, etc.).
-        Parameters:
-        - project (required): Project slug (e.g., 'spring-boot', 'spring-framework')
-        - version (required): Version string (e.g., '3.5.7', '6.2.1')
         """)
-    public Map<String, Object> getDocumentationByVersion(String project, String version) {
-        log.info("Tool: get_documentation_by_version - project={}, version={}", project, version);
+    public DocumentationByVersionResponse getDocumentationByVersion(
+            @ToolParam(description = "Project slug (required, e.g., 'spring-boot', 'spring-framework')") String project,
+            @ToolParam(description = "Version string (required, e.g., '3.5.7', '6.2.1')") String version) {
 
+        log.info("Tool: getDocumentationByVersion - project={}, version={}", project, version);
         Instant startTime = Instant.now();
 
-        try {
-            // Validate parameters
-            if (project == null || project.isBlank()) {
-                return buildErrorResponse("Project parameter is required", null);
-            }
-            if (version == null || version.isBlank()) {
-                return buildErrorResponse("Version parameter is required", null);
-            }
-
-            // Find project
-            var springProject = projectRepository.findBySlug(project)
-                .orElseThrow(() -> new IllegalArgumentException("Project not found: " + project));
-
-            // Find version
-            ProjectVersion projectVersion = versionRepository.findByProjectAndVersion(springProject, version)
-                .orElseThrow(() -> new IllegalArgumentException(
-                    "Version " + version + " not found for project " + project));
-
-            // Get all documentation
-            List<DocumentationDto> docs = documentationService.getByVersion(projectVersion.getId());
-
-            // Group by doc type
-            Map<String, List<Map<String, Object>>> groupedDocs = docs.stream()
-                .collect(Collectors.groupingBy(
-                    DocumentationDto::getDocType,
-                    Collectors.mapping(this::mapDocumentationToResult, Collectors.toList())
-                ));
-
-            long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
-
-            return Map.of(
-                "success", true,
-                "project", springProject.getName(),
-                "projectSlug", project,
-                "version", version,
-                "versionType", projectVersion.getState().name(),
-                "isLatest", projectVersion.getIsLatest(),
-                "totalDocuments", docs.size(),
-                "executionTimeMs", executionTimeMs,
-                "documentationByType", groupedDocs,
-                "allDocuments", docs.stream()
-                    .map(this::mapDocumentationToResult)
-                    .collect(Collectors.toList())
-            );
-
-        } catch (IllegalArgumentException e) {
-            log.warn("Invalid parameters in get_documentation_by_version: {}", e.getMessage());
-            return buildErrorResponse(e.getMessage(),
-                Map.of("project", project != null ? project : "null",
-                    "version", version != null ? version : "null"));
-
-        } catch (Exception e) {
-            log.error("Error in get_documentation_by_version tool", e);
-            return buildErrorResponse("Failed to get documentation: " + e.getMessage(),
-                Map.of("project", project, "version", version));
+        if (project == null || project.isBlank()) {
+            throw new IllegalArgumentException("Project parameter is required");
         }
+        if (version == null || version.isBlank()) {
+            throw new IllegalArgumentException("Version parameter is required");
+        }
+
+        SpringProject springProject = projectRepository.findBySlug(project)
+            .orElseThrow(() -> new IllegalArgumentException("Project not found: " + project));
+
+        ProjectVersion projectVersion = versionRepository.findByProjectAndVersion(springProject, version)
+            .orElseThrow(() -> new IllegalArgumentException(
+                "Version " + version + " not found for project " + project));
+
+        List<DocumentationDto> docs = documentationService.getByVersion(projectVersion.getId());
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        Map<String, List<DocumentationByVersionResponse.DocumentationItem>> groupedDocs = docs.stream()
+            .collect(Collectors.groupingBy(
+                DocumentationDto::getDocType,
+                Collectors.mapping(this::mapToDocumentationItem, Collectors.toList())
+            ));
+
+        List<DocumentationByVersionResponse.DocumentationItem> allDocuments = docs.stream()
+            .map(this::mapToDocumentationItem)
+            .collect(Collectors.toList());
+
+        return new DocumentationByVersionResponse(
+            springProject.getName(),
+            project,
+            version,
+            projectVersion.getState().name(),
+            projectVersion.getIsLatest(),
+            docs.size(),
+            executionTimeMs,
+            groupedDocs,
+            allDocuments
+        );
     }
 
     /**
@@ -253,200 +220,450 @@ public class SpringDocumentationTools {
     @Tool(description = """
         Search for code examples with optional filters.
         Returns code snippets, descriptions, and metadata.
-        Parameters:
-        - query (optional): Search query for title/description
-        - project (optional): Project slug (e.g., 'spring-boot')
-        - version (optional): Version string (e.g., '3.5.7')
-        - language (optional): Programming language (e.g., 'java', 'kotlin', 'groovy')
-        - limit (optional): Maximum number of results (default: 10, max: 50)
         """)
-    public Map<String, Object> getCodeExamples(
-            String query,
-            String project,
-            String version,
-            String language,
-            Integer limit) {
+    public CodeExamplesResponse getCodeExamples(
+            @ToolParam(description = "Search query for title/description (optional)") String query,
+            @ToolParam(description = "Project slug filter (optional, e.g., 'spring-boot')") String project,
+            @ToolParam(description = "Version filter (optional, e.g., '3.5.7')") String version,
+            @ToolParam(description = "Programming language filter (optional, e.g., 'java', 'kotlin', 'groovy')") String language,
+            @ToolParam(description = "Maximum number of results (optional, default: 10, max: 50)") Integer limit) {
 
-        log.info("Tool: get_code_examples - query={}, project={}, version={}, language={}, limit={}",
+        log.info("Tool: getCodeExamples - query={}, project={}, version={}, language={}, limit={}",
             query, project, version, language, limit);
-
         Instant startTime = Instant.now();
 
-        try {
-            // Set default and max limit
-            int effectiveLimit = (limit != null && limit > 0) ? Math.min(limit, 50) : 10;
+        int effectiveLimit = (limit != null && limit > 0) ? Math.min(limit, 50) : 10;
 
-            List<CodeExample> examples;
+        List<CodeExample> examples;
 
-            // Build query based on provided filters
-            if (project != null && !project.isBlank() && version != null && !version.isBlank()) {
-                // Filter by project and version
-                var springProject = projectRepository.findBySlug(project)
-                    .orElseThrow(() -> new IllegalArgumentException("Project not found: " + project));
+        if (project != null && !project.isBlank() && version != null && !version.isBlank()) {
+            SpringProject springProject = projectRepository.findBySlug(project)
+                .orElseThrow(() -> new IllegalArgumentException("Project not found: " + project));
 
-                ProjectVersion projectVersion = versionRepository.findByProjectAndVersion(springProject, version)
-                    .orElseThrow(() -> new IllegalArgumentException(
-                        "Version " + version + " not found for project " + project));
+            ProjectVersion projectVersion = versionRepository.findByProjectAndVersion(springProject, version)
+                .orElseThrow(() -> new IllegalArgumentException(
+                    "Version " + version + " not found for project " + project));
 
-                if (language != null && !language.isBlank()) {
-                    examples = codeExampleRepository.findByVersionAndLanguage(projectVersion, language);
-                } else {
-                    examples = codeExampleRepository.findByVersion(projectVersion);
-                }
-
-            } else if (query != null && !query.isBlank()) {
-                // Search by query
-                examples = codeExampleRepository.searchByTitle(query);
+            if (language != null && !language.isBlank()) {
+                examples = codeExampleRepository.findByVersionAndLanguage(projectVersion, language);
             } else {
-                // Get all examples (limited)
-                examples = codeExampleRepository.findAll();
+                examples = codeExampleRepository.findByVersion(projectVersion);
             }
+        } else if (query != null && !query.isBlank()) {
+            examples = codeExampleRepository.searchByTitle(query);
+        } else {
+            examples = codeExampleRepository.findAll();
+        }
 
-            // Apply text filter if query provided (for cases where we got results by version)
-            if (query != null && !query.isBlank() && (project != null || version != null)) {
-                String lowerQuery = query.toLowerCase();
-                examples = examples.stream()
-                    .filter(e -> e.getTitle().toLowerCase().contains(lowerQuery) ||
-                        (e.getDescription() != null && e.getDescription().toLowerCase().contains(lowerQuery)))
-                    .collect(Collectors.toList());
-            }
-
-            // Apply limit
-            List<CodeExample> limitedExamples = examples.stream()
-                .limit(effectiveLimit)
+        if (query != null && !query.isBlank() && (project != null || version != null)) {
+            String lowerQuery = query.toLowerCase();
+            examples = examples.stream()
+                .filter(e -> e.getTitle().toLowerCase().contains(lowerQuery) ||
+                    (e.getDescription() != null && e.getDescription().toLowerCase().contains(lowerQuery)))
                 .collect(Collectors.toList());
+        }
 
-            long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+        int totalFound = examples.size();
+        List<CodeExample> limitedExamples = examples.stream()
+            .limit(effectiveLimit)
+            .collect(Collectors.toList());
 
-            return Map.of(
-                "success", true,
-                "filters", buildCodeExampleFilters(query, project, version, language, effectiveLimit),
-                "totalFound", examples.size(),
-                "returnedResults", limitedExamples.size(),
-                "executionTimeMs", executionTimeMs,
-                "examples", limitedExamples.stream()
-                    .map(this::mapCodeExampleToResult)
-                    .collect(Collectors.toList())
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        CodeExamplesResponse.CodeExampleFilters filters = new CodeExamplesResponse.CodeExampleFilters(
+            query != null ? query : "none",
+            project != null ? project : "all",
+            version != null ? version : "all",
+            language != null ? language : "all",
+            effectiveLimit
+        );
+
+        List<CodeExamplesResponse.CodeExampleItem> exampleItems = limitedExamples.stream()
+            .map(this::mapToCodeExampleItem)
+            .collect(Collectors.toList());
+
+        return new CodeExamplesResponse(
+            filters,
+            totalFound,
+            limitedExamples.size(),
+            executionTimeMs,
+            exampleItems
+        );
+    }
+
+    // ==================== Spring Boot Version Tools ====================
+
+    /**
+     * List all Spring Boot versions with optional filtering
+     */
+    @Tool(description = """
+        List all Spring Boot versions available in the system. Results include version numbers, states (GA, RC, SNAPSHOT, MILESTONE),
+        release dates, and support end dates (OSS and Enterprise). Results are ordered by version descending (latest first).
+        """)
+    public SpringBootVersionsResponse listSpringBootVersions(
+            @ToolParam(description = "Filter by version state (optional): 'GA', 'RC', 'SNAPSHOT', 'MILESTONE'") String state,
+            @ToolParam(description = "Maximum number of results (optional, default: 20, max: 100)") Integer limit) {
+
+        log.info("Tool: listSpringBootVersions - state={}, limit={}", state, limit);
+        Instant startTime = Instant.now();
+
+        int effectiveLimit = (limit != null && limit > 0) ? Math.min(limit, 100) : 20;
+        boolean enterpriseEnabled = settingsService.isEnterpriseSubscriptionEnabled();
+
+        List<SpringBootVersion> versions;
+        if (state != null && !state.isBlank()) {
+            try {
+                VersionState versionState = VersionState.valueOf(state.toUpperCase());
+                versions = springBootVersionRepository.findByState(versionState);
+            } catch (IllegalArgumentException e) {
+                throw new IllegalArgumentException("Invalid state: " + state + ". Valid values: GA, RC, SNAPSHOT, MILESTONE");
+            }
+        } else {
+            versions = springBootVersionRepository.findAllOrderByVersionDesc();
+        }
+
+        int totalFound = versions.size();
+        List<SpringBootVersion> limitedVersions = versions.stream()
+            .limit(effectiveLimit)
+            .collect(Collectors.toList());
+
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        SpringBootVersionsResponse.SpringBootVersionFilters filters =
+            new SpringBootVersionsResponse.SpringBootVersionFilters(
+                state != null ? state : "all",
+                effectiveLimit
             );
 
-        } catch (IllegalArgumentException e) {
-            log.warn("Invalid parameters in get_code_examples: {}", e.getMessage());
-            return buildErrorResponse(e.getMessage(),
-                buildCodeExampleFilters(query, project, version, language, limit));
+        List<SpringBootVersionsResponse.SpringBootVersionInfo> versionInfos = limitedVersions.stream()
+            .map(v -> mapToSpringBootVersionInfo(v, enterpriseEnabled))
+            .collect(Collectors.toList());
 
-        } catch (Exception e) {
-            log.error("Error in get_code_examples tool", e);
-            return buildErrorResponse("Failed to get code examples: " + e.getMessage(),
-                buildCodeExampleFilters(query, project, version, language, limit));
-        }
-    }
-
-    // ==================== Helper Methods ====================
-
-    /**
-     * Build error response with consistent structure
-     */
-    private Map<String, Object> buildErrorResponse(String errorMessage, Map<String, Object> additionalInfo) {
-        Map<String, Object> response = new HashMap<>();
-        response.put("success", false);
-        response.put("error", errorMessage);
-
-        if (additionalInfo != null) {
-            response.putAll(additionalInfo);
-        }
-
-        return response;
-    }
-
-    /**
-     * Build filters map for search results
-     */
-    private Map<String, Object> buildFiltersMap(String project, String version, String docType) {
-        return Map.of(
-            "project", project != null ? project : "all",
-            "version", version != null ? version : "all",
-            "docType", docType != null ? docType : "all"
+        return new SpringBootVersionsResponse(
+            filters,
+            enterpriseEnabled,
+            totalFound,
+            limitedVersions.size(),
+            executionTimeMs,
+            versionInfos
         );
     }
 
     /**
-     * Build filters map for code example results
+     * Get the latest Spring Boot version for a given major.minor combination
      */
-    private Map<String, Object> buildCodeExampleFilters(String query, String project,
-                                                         String version, String language, Integer limit) {
-        Map<String, Object> filters = new HashMap<>();
-        filters.put("query", query != null ? query : "none");
-        filters.put("project", project != null ? project : "all");
-        filters.put("version", version != null ? version : "all");
-        filters.put("language", language != null ? language : "all");
-        filters.put("limit", limit != null ? limit : 10);
-        return filters;
+    @Tool(description = """
+        Get the latest patch version for a specific Spring Boot major.minor version.
+        For example, for Spring Boot 3.5, returns the latest 3.5.x version.
+        """)
+    public LatestSpringBootVersionResponse getLatestSpringBootVersion(
+            @ToolParam(description = "Major version number (required, e.g., 3)") Integer majorVersion,
+            @ToolParam(description = "Minor version number (required, e.g., 5)") Integer minorVersion) {
+
+        log.info("Tool: getLatestSpringBootVersion - major={}, minor={}", majorVersion, minorVersion);
+        Instant startTime = Instant.now();
+
+        if (majorVersion == null || minorVersion == null) {
+            throw new IllegalArgumentException("Both majorVersion and minorVersion parameters are required");
+        }
+
+        boolean enterpriseEnabled = settingsService.isEnterpriseSubscriptionEnabled();
+
+        List<SpringBootVersion> versions = springBootVersionRepository
+            .findByMajorVersionAndMinorVersionOrderByPatchVersionDesc(majorVersion, minorVersion);
+
+        if (versions.isEmpty()) {
+            throw new IllegalArgumentException(
+                "No Spring Boot version found for " + majorVersion + "." + minorVersion);
+        }
+
+        SpringBootVersion latestVersion = versions.get(0);
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        List<SpringBootVersionsResponse.SpringBootVersionInfo> allVersionInfos = versions.stream()
+            .map(v -> mapToSpringBootVersionInfo(v, enterpriseEnabled))
+            .collect(Collectors.toList());
+
+        return new LatestSpringBootVersionResponse(
+            majorVersion,
+            minorVersion,
+            versions.size(),
+            executionTimeMs,
+            mapToSpringBootVersionInfo(latestVersion, enterpriseEnabled),
+            allVersionInfos
+        );
     }
 
     /**
-     * Map DocumentationDto to result map
+     * Filter Spring Boot versions by support status
      */
-    private Map<String, Object> mapDocumentationToResult(DocumentationDto dto) {
-        Map<String, Object> result = new HashMap<>();
-        result.put("id", dto.getId());
-        result.put("title", dto.getTitle());
-        result.put("url", dto.getUrl());
-        result.put("description", dto.getDescription() != null ? dto.getDescription() : "");
-        result.put("project", dto.getProjectName());
-        result.put("projectSlug", dto.getProjectSlug());
-        result.put("version", dto.getVersion());
-        result.put("docType", dto.getDocType());
-        result.put("contentType", dto.getContentType() != null ? dto.getContentType() : "");
+    @Tool(description = """
+        Filter Spring Boot versions by their support status (active or ended).
+        Uses the system's enterprise subscription setting to determine which support date to check.
+        """)
+    public FilteredSpringBootVersionsResponse filterSpringBootVersionsBySupport(
+            @ToolParam(description = "Filter by support status (optional) - 'true' for supported versions, 'false' for end-of-life") Boolean supportActive,
+            @ToolParam(description = "Maximum number of results (optional, default: 20, max: 100)") Integer limit) {
 
-        // Add snippet if available
-        if (dto.getSnippet() != null && !dto.getSnippet().isEmpty()) {
-            result.put("snippet", dto.getSnippet());
-        }
+        log.info("Tool: filterSpringBootVersionsBySupport - supportActive={}, limit={}", supportActive, limit);
+        Instant startTime = Instant.now();
 
-        // Add rank if available (for search results)
-        if (dto.getRank() != null && dto.getRank() > 0) {
-            result.put("rank", dto.getRank());
-            result.put("relevance", calculateRelevanceLabel(dto.getRank()));
-        }
+        int effectiveLimit = (limit != null && limit > 0) ? Math.min(limit, 100) : 20;
+        boolean enterpriseEnabled = settingsService.isEnterpriseSubscriptionEnabled();
+        LocalDate today = LocalDate.now();
 
-        return result;
+        List<SpringBootVersion> allVersions = springBootVersionRepository.findAllOrderByVersionDesc();
+
+        List<SpringBootVersion> filteredVersions = allVersions.stream()
+            .filter(v -> {
+                if (supportActive == null) {
+                    return true;
+                }
+
+                LocalDate supportEndDate = enterpriseEnabled ? v.getEnterpriseSupportEnd() : v.getOssSupportEnd();
+
+                if (supportEndDate == null) {
+                    return supportActive;
+                }
+
+                boolean isSupported = today.isBefore(supportEndDate);
+                return supportActive == isSupported;
+            })
+            .limit(effectiveLimit)
+            .collect(Collectors.toList());
+
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        FilteredSpringBootVersionsResponse.SupportFilters filters =
+            new FilteredSpringBootVersionsResponse.SupportFilters(
+                supportActive != null ? supportActive.toString() : "all",
+                effectiveLimit
+            );
+
+        List<SpringBootVersionsResponse.SpringBootVersionInfo> versionInfos = filteredVersions.stream()
+            .map(v -> mapToSpringBootVersionInfo(v, enterpriseEnabled))
+            .collect(Collectors.toList());
+
+        return new FilteredSpringBootVersionsResponse(
+            filters,
+            enterpriseEnabled,
+            enterpriseEnabled ? "enterpriseSupportEnd" : "ossSupportEnd",
+            filteredVersions.size(),
+            executionTimeMs,
+            versionInfos
+        );
     }
 
     /**
-     * Map CodeExample entity to result map
+     * List all Spring projects compatible with a specific Spring Boot version
      */
-    private Map<String, Object> mapCodeExampleToResult(CodeExample example) {
-        Map<String, Object> result = new HashMap<>();
-        result.put("id", example.getId());
-        result.put("title", example.getTitle());
-        result.put("description", example.getDescription() != null ? example.getDescription() : "");
-        result.put("codeSnippet", example.getCodeSnippet());
-        result.put("language", example.getLanguage());
-        result.put("category", example.getCategory() != null ? example.getCategory() : "");
+    @Tool(description = """
+        List all Spring projects that are compatible with a specific Spring Boot version (major.minor).
+        Returns projects and their compatible versions for the given Spring Boot version.
+        """)
+    public ProjectsBySpringBootVersionResponse listProjectsBySpringBootVersion(
+            @ToolParam(description = "Spring Boot major version number (required, e.g., 3)") Integer majorVersion,
+            @ToolParam(description = "Spring Boot minor version number (required, e.g., 5)") Integer minorVersion) {
 
-        // Add tags if available
-        if (example.getTags() != null && example.getTags().length > 0) {
-            result.put("tags", Arrays.asList(example.getTags()));
-        } else {
-            result.put("tags", List.of());
+        log.info("Tool: listProjectsBySpringBootVersion - major={}, minor={}", majorVersion, minorVersion);
+        Instant startTime = Instant.now();
+
+        if (majorVersion == null || minorVersion == null) {
+            throw new IllegalArgumentException("Both majorVersion and minorVersion parameters are required");
         }
 
-        result.put("sourceUrl", example.getSourceUrl() != null ? example.getSourceUrl() : "");
+        List<SpringBootVersion> bootVersions = springBootVersionRepository
+            .findByMajorVersionAndMinorVersionOrderByPatchVersionDesc(majorVersion, minorVersion);
 
-        // Add project and version info
+        if (bootVersions.isEmpty()) {
+            throw new IllegalArgumentException(
+                "No Spring Boot version found for " + majorVersion + "." + minorVersion);
+        }
+
+        SpringBootVersion springBootVersion = bootVersions.get(0);
+
+        List<SpringBootCompatibility> compatibilities =
+            compatibilityRepository.findAllBySpringBootVersionIdWithProjectDetails(springBootVersion.getId());
+
+        Map<String, List<ProjectVersion>> projectVersionMap = compatibilities.stream()
+            .map(SpringBootCompatibility::getCompatibleProjectVersion)
+            .collect(Collectors.groupingBy(
+                pv -> pv.getProject().getSlug(),
+                Collectors.toList()
+            ));
+
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        ProjectsBySpringBootVersionResponse.SpringBootVersionInfo versionInfo =
+            new ProjectsBySpringBootVersionResponse.SpringBootVersionInfo(
+                springBootVersion.getVersion(),
+                springBootVersion.getMajorVersion(),
+                springBootVersion.getMinorVersion(),
+                springBootVersion.getState().name()
+            );
+
+        List<ProjectsBySpringBootVersionResponse.CompatibleProject> compatibleProjects =
+            projectVersionMap.entrySet().stream()
+                .map(entry -> {
+                    ProjectVersion firstVersion = entry.getValue().get(0);
+                    SpringProject project = firstVersion.getProject();
+
+                    List<ProjectsBySpringBootVersionResponse.CompatibleVersion> compatibleVersions =
+                        entry.getValue().stream()
+                            .map(pv -> new ProjectsBySpringBootVersionResponse.CompatibleVersion(
+                                pv.getVersion(),
+                                pv.getState().name(),
+                                pv.getIsLatest(),
+                                pv.getReferenceDocUrl() != null ? pv.getReferenceDocUrl() : "",
+                                pv.getApiDocUrl() != null ? pv.getApiDocUrl() : ""
+                            ))
+                            .collect(Collectors.toList());
+
+                    return new ProjectsBySpringBootVersionResponse.CompatibleProject(
+                        project.getSlug(),
+                        project.getName(),
+                        project.getDescription() != null ? project.getDescription() : "",
+                        project.getHomepageUrl() != null ? project.getHomepageUrl() : "",
+                        compatibleVersions
+                    );
+                })
+                .collect(Collectors.toList());
+
+        return new ProjectsBySpringBootVersionResponse(
+            versionInfo,
+            projectVersionMap.size(),
+            compatibilities.size(),
+            executionTimeMs,
+            compatibleProjects
+        );
+    }
+
+    /**
+     * Find Spring projects by use case keyword search
+     */
+    @Tool(description = """
+        Search for Spring projects by use case. Searches in project names and descriptions for keywords.
+        Useful for finding projects that solve specific problems or use cases.
+        """)
+    public ProjectsByUseCaseResponse findProjectsByUseCase(
+            @ToolParam(description = "Use case keyword or phrase (required, e.g., 'data access', 'security', 'messaging', 'web')") String useCase) {
+
+        log.info("Tool: findProjectsByUseCase - useCase={}", useCase);
+        Instant startTime = Instant.now();
+
+        if (useCase == null || useCase.isBlank()) {
+            throw new IllegalArgumentException("useCase parameter is required");
+        }
+
+        List<SpringProject> allProjects = projectRepository.findByActiveTrue();
+        String lowerCaseQuery = useCase.toLowerCase();
+
+        List<SpringProject> matchingProjects = allProjects.stream()
+            .filter(p -> {
+                String name = p.getName().toLowerCase();
+                String desc = p.getDescription() != null ? p.getDescription().toLowerCase() : "";
+                return name.contains(lowerCaseQuery) || desc.contains(lowerCaseQuery);
+            })
+            .collect(Collectors.toList());
+
+        long executionTimeMs = Duration.between(startTime, Instant.now()).toMillis();
+
+        List<ProjectsByUseCaseResponse.ProjectInfo> projectInfos = matchingProjects.stream()
+            .map(p -> new ProjectsByUseCaseResponse.ProjectInfo(
+                p.getName(),
+                p.getSlug(),
+                p.getDescription() != null ? p.getDescription() : "",
+                p.getHomepageUrl() != null ? p.getHomepageUrl() : "",
+                p.getGithubUrl() != null ? p.getGithubUrl() : ""
+            ))
+            .collect(Collectors.toList());
+
+        return new ProjectsByUseCaseResponse(
+            useCase,
+            matchingProjects.size(),
+            executionTimeMs,
+            projectInfos
+        );
+    }
+
+    // ==================== Helper Methods ====================
+
+    private SearchDocsResponse.DocumentationResult mapToDocumentationResult(DocumentationDto dto) {
+        return new SearchDocsResponse.DocumentationResult(
+            dto.getId(),
+            dto.getTitle(),
+            dto.getUrl(),
+            dto.getDescription() != null ? dto.getDescription() : "",
+            dto.getProjectName(),
+            dto.getProjectSlug(),
+            dto.getVersion(),
+            dto.getDocType(),
+            dto.getContentType() != null ? dto.getContentType() : "",
+            dto.getSnippet() != null && !dto.getSnippet().isEmpty() ? dto.getSnippet() : null,
+            dto.getRank() != null && dto.getRank() > 0 ? dto.getRank() : null,
+            dto.getRank() != null && dto.getRank() > 0 ? calculateRelevanceLabel(dto.getRank()) : null
+        );
+    }
+
+    private DocumentationByVersionResponse.DocumentationItem mapToDocumentationItem(DocumentationDto dto) {
+        return new DocumentationByVersionResponse.DocumentationItem(
+            dto.getId(),
+            dto.getTitle(),
+            dto.getUrl(),
+            dto.getDescription() != null ? dto.getDescription() : "",
+            dto.getProjectName(),
+            dto.getProjectSlug(),
+            dto.getVersion(),
+            dto.getDocType(),
+            dto.getContentType() != null ? dto.getContentType() : "",
+            dto.getSnippet() != null && !dto.getSnippet().isEmpty() ? dto.getSnippet() : null,
+            dto.getRank() != null && dto.getRank() > 0 ? dto.getRank() : null,
+            dto.getRank() != null && dto.getRank() > 0 ? calculateRelevanceLabel(dto.getRank()) : null
+        );
+    }
+
+    private CodeExamplesResponse.CodeExampleItem mapToCodeExampleItem(CodeExample example) {
         ProjectVersion version = example.getVersion();
-        if (version != null) {
-            result.put("project", version.getProject().getName());
-            result.put("projectSlug", version.getProject().getSlug());
-            result.put("version", version.getVersion());
-        }
 
-        return result;
+        return new CodeExamplesResponse.CodeExampleItem(
+            example.getId(),
+            example.getTitle(),
+            example.getDescription() != null ? example.getDescription() : "",
+            example.getCodeSnippet(),
+            example.getLanguage(),
+            example.getCategory() != null ? example.getCategory() : "",
+            example.getTags() != null && example.getTags().length > 0 ?
+                Arrays.asList(example.getTags()) : List.of(),
+            example.getSourceUrl() != null ? example.getSourceUrl() : "",
+            version != null ? version.getProject().getName() : null,
+            version != null ? version.getProject().getSlug() : null,
+            version != null ? version.getVersion() : null
+        );
     }
 
-    /**
-     * Calculate relevance label from rank score
-     */
+    private SpringBootVersionsResponse.SpringBootVersionInfo mapToSpringBootVersionInfo(
+            SpringBootVersion version, boolean enterpriseEnabled) {
+
+        return new SpringBootVersionsResponse.SpringBootVersionInfo(
+            version.getId(),
+            version.getVersion(),
+            version.getMajorVersion(),
+            version.getMinorVersion(),
+            version.getPatchVersion() != null ? version.getPatchVersion() : 0,
+            version.getState().name(),
+            version.getIsCurrent(),
+            version.getReleasedAt() != null ? version.getReleasedAt().toString() : null,
+            version.getOssSupportEnd() != null ? version.getOssSupportEnd().toString() : null,
+            version.getEnterpriseSupportEnd() != null ? version.getEnterpriseSupportEnd().toString() : null,
+            version.referenceDocUrlFormatted(),
+            version.apiDocUrlFormatted(),
+            version.isOssSupportActive(),
+            version.isEnterpriseSupportActive(),
+            version.isEndOfLife(),
+            enterpriseEnabled ? version.isEnterpriseSupportActive() : version.isOssSupportActive()
+        );
+    }
+
     private String calculateRelevanceLabel(double rank) {
         if (rank > 0.5) {
             return "high";
